# matched-support-audit

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  LICENSE-CONTENT  README.md  pyproject.toml  requirements-reproduction.txt
figures/: ExtendedDataFigure1_ReconstructionDrift.tiff  FIGURE_LEGENDS.md  FIGURE_QA_REPORT.json  FIGURE_QA_REPORT.md  Figure1_MatchedSpatialReference.tiff  Figure2_SyntheticOperatingExperiments.tiff  Figure3_LegacyImageMatrixAudit.tiff  Figure4_PublicVideoStressTest.tiff  Figure5_EvidenceBoundaries.tiff  figure_manifest.json
protocols/: CCA_METHOD_SPEC.md  FIGURE_CONTRACT.md  MATCHED_SUPPORT_AUDIT_SPEC.md  YOUTUBEPD_LOCKED_PROTOCOL_20260709.md
reproduction/: CLEANROOM_REPRODUCTION.md  common_cohort_comparison.csv  fresh_source_audit_summary.json  input_cohort_summary.json  pip-freeze.txt  synthetic_seed_correction_run.json  third_party_manifest.json  verification.json  verification.md
scripts/: build_source_data.py  build_youtubepd_common_cohort.py  combine_synthetic_calibration.py  download_youtubepd_clips.py  fetch_third_party.py  make_publication_figures.py  qa_publication_figures.py  run_public_reproduction.py  verify_reproduction.py
source_data/: extended_youtubepd_common_cohort.csv  extended_youtubepd_reconstruction_drift.csv  fig2_mechanism_tasks.csv  fig2_synthetic_operating_curve.csv  fig3_detector_conditions.csv  fig3_detector_shuffle.csv  fig3_distributed_controls.csv  fig3_full_image_metrics.csv  fig3_pd_roi_summary.csv  fig3_pd_translated_supports.csv  fig3_random_pixel_budgets.csv  fig3_similarity_filter.csv  (+12 more)
(+18 files in other folders)
